--- a/app/src/main/res/layout/item_drink.xml
+++ b/app/src/main/res/layout/item_drink.xml
@@ -70,6 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#000000"
+        android:layout_marginBottom="12dp"
 
         />
 
